refactor(api): delete item request endpoint changed
